# ad-hyperoptimize

./: .gitignore  .i18n-source.json  CODE_SIGNING.md  COMMERCIAL-LICENSING.md  CONTRIBUTING.md  LICENSE-noncommercial  README.md  SECURITY.md  build.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: quality.yml  release.yml  test-build.yml
src/: App.tsx  api.ts  i18n.tsx  localize.ts  styles.css
src-tauri/: Cargo.toml  app.manifest  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: analysis.rs  autoopt.rs  bench.rs  bootopt.rs  cache.rs  cleanup.rs  ctxmenu.rs  debloater.rs  diskanalyzer.rs  drivers.rs  gameboost.rs  gamedb.rs  gameprofile.rs  gputweaks.rs  healthcheck.rs  hwmonitor.rs  hwprofile.rs  latency.rs  lib.rs  main.rs  monitor.rs  perftweaks.rs  powerplan.rs  privacy.rs  procmgr.rs  profiles.rs  ps.rs  regclean.rs  report.rs  safety.rs  scan.rs  schedtasks.rs  security.rs  services.rs  softwareinstaller.rs  startup.rs  tweaks.rs  uninstaller.rs  updates.rs
src/components/: HwWarnings.tsx  ui.tsx
src/data/: hardwareCatalog.ts
src/hooks/: useHwProfile.ts
src/lib/: pcAdvisor.ts
src/locales/: es.ts  fr.ts  pl.ts  pt.ts  ru.ts  sv.ts  tr.ts
src/pages/: AppUninstaller.tsx  AutoOptimizer.tsx  Benchmark.tsx  BootOptimizer.tsx  Cleanup.tsx  CtxMenuCleaner.tsx  Dashboard.tsx  Debloater.tsx  DiskAnalyzer.tsx  DriverManager.tsx  GameBooster.tsx  GameProfiles.tsx  GpuTweaks.tsx  Hardware.tsx  HealthCheck.tsx  (+20 more)
